# momentsouthern250_project

./: .gitignore  .gitmodules  CMakeLists.txt  Reddit Conversation.md
src/: GL_FBX.cpp  GL_FBX.hpp  MS250_FBX.cpp  MS250_FBX.h  MS250_Math.cpp  MS250_Math.hpp  MS250_Structs.hpp  MS250_Utils.cpp  MS250_Utils.hpp  Ray_FBX.cpp  Ray_FBX.hpp  Utils.cpp  Utils.h  glGrid.cpp  glGrid.fs  glGrid.hpp  glGrid.vs  main.cpp  main_raylib.cpp  test.fs  test.vs  testTri.cpp  testTri.hpp  testTri.vs
src/glad/: gl.c  gl.h
